Version 13

--Fixed a crash that occurred when the user mistakenly launched the v12 game
  application from the v11 folder (thanks Paciferal).





Version 12   Live Server Fixes

--Added missing column to shadow table where dead owners' houses are held to
  prevent unexpected responses from server (thanks Gardner Marshall).





Version 12     2013-July-4

--Animals now only start moving after the player sees them, making it
  impossible for a never-visible animal to move around behind the walls and
  trigger things mysteriously (the animal now has to be seen at least once,
  perhaps through a window, before it can start doing this).





Version 11   Live Server Fixes

--A robber's backpack contents are now discarded upon leaving the target house
  or reaching the vault.  Backpack contents are only added to the vault when a
  robber dies in the house.  Experimenting with this as a solution to the
  multi-life tool dumping loophole.

--Wife retains her half of the money (and accumulates her own salary) even
  after a robbery that reaches the vault.  Previously, after a vault robbery,
  half of the money she held would be put in the vault.  This changes prevents
  someone from whittling away at house's money by reaching the vault over and
  over without finding the wife.

--No longer reports salary earnings to you that have already been stolen.






Version 11   2013-July-2

--Fixed bug in family death detection being delayed by a step, which resulted
  in several unexpected behaviors (thanks Ukuko).

--Each security tape now has a length stat (thanks Bey Bey).





Version 10  Live Server Fixes

--Fixed bug where family positions in server-side-simulation house map did not
  match actual family positions in the case of robber suicide, causing house
  check-in after suicide (if family moved at all) to fail.





Version 10   2013-June-27

--Fixed so that you can't bypass the 'Download Latest Version' message by
  logging in again (thanks Colorfusion).
