@@ -12,6 +12,9 @@ Version 12   Live Server Fixes
 --Added missing column to shadow table where dead owners' houses are held to
   prevent unexpected responses from server (thanks Gardner Marshall).
 
+--Fixed a potential deadlock on duplicate newHouse calls when a user's house
+  does not yet exist.
+
 
 
 
